Version 2.02.169 - 
=====================================
  Adjust to misordered raid parameters
  Conditionally reject raid convert to striped/raid0* after reshape
  Ensure raid6 upconversion restrictions
  Adjust mirror+raid DSOs to aforementioned lvconvert --repair
  Disable lvmetad when lvconvert --repair is run.
  Remove obsolete lvmchange binary - convert to built-in command.
  Lvdisplay [-m] shows more informations for cached volumes.
  Add option for lvcreate/lvconvert --cachemetadataformat auto|1|2.
  Support cache segment with configurable metadata format.
  Add allocation/cache_metadata_format profilable setttings.
  Use function cache_set_params() for both lvcreate and lvconvert.
  Skip rounding on cache chunk size boudary when create cache LV.
  Improve cache_set_params support for chunk_size selection.
  Fix metadata profile allocation/cache_[mode|policy] setting.
  Fix missing support for using allocation/cache_pool_chunk_size setting.
  Upstream git moved to https://sourceware.org/git/?p=lvm2
  Support conversion of raid type, stripesize and number of disks
  Reject writemostly/writebehind in lvchange during resynchronization.
  Deactivate active origin first before removal for improved workflow.
  Fix regression of accepting options --type and -m with lvresize (2.02.158).
  Add lvconvert --swapmetadata, new specific way to swap pool metadata LVs.
  Add lvconvert --startpoll, new specific way to start polling conversions.
  Add lvconvert --mergethin, new specific way to merge thin snapshots.
  Add lvconvert --mergemirrors, new specific way to merge split mirrors.
  Add lvconvert --mergesnapshot, new specific way to combine cow LVs.
  Split up lvconvert code based on command definitions.
  Split up lvchange code based on command definitions.
  Generate help output and man pages from command definitions.
  Verify all command line items against command definition.
  Match every command run to one command definition.