@@ -491,6 +491,9 @@
 /* Define to 1 if you have the <sys/file.h> header file. */
 #undef HAVE_SYS_FILE_H
 
+/* Define to 1 if you have the <sys/inotify.h> header file. */
+#undef HAVE_SYS_INOTIFY_H
+
 /* Define to 1 if you have the <sys/ioctl.h> header file. */
 #undef HAVE_SYS_IOCTL_H
 
@@ -625,6 +628,9 @@
 
 /* Define to 1 to include code that uses lvmpolld. */
 #undef LVMPOLLD_SUPPORT
+
+/* configure command line used */
+#undef LVM_CONFIGURE_LINE
 
 /* Path to lvm binary. */
 #undef LVM_PATH
